@@ -3,6 +3,8 @@
    data to be returned
  * Returned AAAA to it's pre-3.0.2 default of binary result (text results can
    still be gotten via resulttype='text')
+ * Switch DNS.getTXTdata back to returning a string.  This is consistent with
+   what dnspython3 does as well.  The switch to bytes was a bad idea.
 
 3.0.2 Thu Jan 19 10:59:00 EST 2012
 
